Updated Project with Loaction and Category Styling Fixes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
               <button class="navItem category dropbtn">
                 Search By Location
               </button>
-              <div class="dropdownContent locationDropdown"></div>
-            </div>
+              <div class="dropdownContent locationDropdown">
+                <div class="locationRow"></div>
+              </div>
           </div>
           <span class="hspace"></span>
           <li>
