Updated Project with Date Display Functionality

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Mealz</title>
+    <link rel="icon" href="./img/favicon.png" />
     <link href="./css/main.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -42,6 +43,7 @@
               <div class="dropdownContent locationDropdown">
                 <div class="locationRow"></div>
               </div>
+            </div>
           </div>
           <span class="hspace"></span>
           <li>
